# SimpleVPKEditor

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.sh  buildlog.txt  cmake_install.cmake  custom_findwxwidgets.cmake  main.cpp  toolchain.cmake
src/: main.cpp
src/libs/: CMakeLists.txt  README.MD
src/threads/: vpk_process_file.cpp  vpk_process_file.hpp
src/windows/: mainwindow.cpp  mainwindow.hpp
